Fix hero image overlay on mobile

--- a/src/styles/layouts/_hero.scss
+++ b/src/styles/layouts/_hero.scss
@@ -2,6 +2,10 @@
 
 .hero {
   overflow-y: visible;
+
+  @include mq("md", "max") {
+    overflow-x: hidden;
+  }
 }
 
 .hero__inner {
